--- a/assignment-2/runtime/Cargo.toml
+++ b/assignment-2/runtime/Cargo.toml
@@ -17,6 +17,11 @@ default-features = false
 path = '../pallets/crud'
 version = '4.0.0-dev'
 
+[dependencies.pallet-poe]
+default-features = false
+path = '../pallets/poe'
+version = '4.0.0-dev'
+
 [build-dependencies.substrate-wasm-builder]
 git = 'https://github.com/paritytech/substrate.git'
 tag = 'monthly-2021-12'
@@ -210,10 +215,11 @@ std = [
     'frame-system/std',
     'pallet-aura/std',
     'pallet-balances/std',
+    'pallet-crud/std',
     'pallet-grandpa/std',
+    'pallet-poe/std',
     'pallet-randomness-collective-flip/std',
     'pallet-sudo/std',
-    'pallet-crud/std',
     'pallet-timestamp/std',
     'pallet-transaction-payment-rpc-runtime-api/std',
     'pallet-transaction-payment/std',
