--- a/assignment-5/barnacle/pallets/poe/Cargo.toml
+++ b/assignment-5/barnacle/pallets/poe/Cargo.toml
@@ -22,20 +22,17 @@ version = '2.0.0'
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 optional = true
-tag = 'monthly-2021-12'
-version = '4.0.0-dev'
+branch = 'polkadot-v0.9.13'
 
 [dependencies.frame-support]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-tag = 'monthly-2021-12'
-version = '4.0.0-dev'
+branch = 'polkadot-v0.9.13'
 
 [dependencies.frame-system]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-tag = 'monthly-2021-12'
-version = '4.0.0-dev'
+branch = 'polkadot-v0.9.13'
 
 [dependencies.log]
 default-features = false
@@ -49,20 +46,17 @@ version = '1.0'
 [dependencies.sp-io]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-tag = 'monthly-2021-12'
-version = '4.0.0-dev'
+branch = 'polkadot-v0.9.13'
 
 [dev-dependencies.sp-core]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-tag = 'monthly-2021-12'
-version = '4.0.0-dev'
+branch = 'polkadot-v0.9.13'
 
 [dev-dependencies.sp-runtime]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-tag = 'monthly-2021-12'
-version = '4.0.0-dev'
+branch = 'polkadot-v0.9.13'
 
 [features]
 default = ['std']
